<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cant_be_completed">The requested action could not be completed.</string>
    <string name="adactivity_missing">%s was not detected in AndroidManifest.xml!</string>
    <string name="adactivity_no_type">AdActivity launched with no type.</string>
    <string name="adscope_app_intro_info">产品功能介绍</string>
    <string name="adscope_app_not_install">应用未安装</string>
    <string name="adscope_app_permission">应用权限</string>
    <string name="adscope_app_privacy_policy">隐私协议</string>
    <string name="adscope_click_install">点击安装</string>
    <string name="adscope_complaint">投诉</string>
    <string name="adscope_complaint_result_text"><font size="13">投诉成功，我们将重视您的反馈。</font></string>
    <string name="adscope_developer">开发者 ：</string>
    <string name="adscope_dialog_cancel">取消</string>
    <string name="adscope_dialog_done">确定</string>
    <string name="adscope_dialog_download_immediately">立即下载</string>
    <string name="adscope_dialog_text_hint"><font size="13">其他投诉</font></string>
    <string name="adscope_dialog_tip">提示</string>
    <string name="adscope_download_complete">下载完成</string>
    <string name="adscope_download_error">下载错误</string>
    <string name="adscope_download_progress">下载进度:</string>
    <string name="adscope_now_downloading">正在下载...</string>
    <string name="adscope_version_code">版本号 ：</string>
    <string name="adscope_webview_close_text">关闭</string>
    <string name="adscope_will_open_the_third_app">即将打开第三方应用</string>
    <string name="adscope_wrong_sliding_direction">滑动方向不对</string>
    <string name="adsize_too_big" formatted="false">E103: You requested an Ad larger than the measured ad space. Ad space size: %dx%d, request size: %dx%d</string>
    <string name="allow">Allow</string>
    <string name="already_expanded">Cannot load a new ad while the current ad is expanded. onAdRequestFailed will not be called</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anythink_adx_sdk_check_tips_confirm">OK</string>
    <string name="anythink_adx_sdk_check_tips_miss_adapter">%s_network_adx_*.aar is missing now, which would make ADX cannot function normally. Highly recommend adding it to the project. Please contact the AM/BD team for a further investigation. Thanks for your cooperation!</string>
    <string name="anythink_adx_sdk_check_tips_miss_sdk">%s_adx_sdk__*.aar is missing now, which would make ADX cannot function normally. Highly recommend adding it to the project. Please contact the AM/BD team for a further investigation. Thanks for your cooperation!</string>
    <string name="anythink_adx_sdk_check_tips_title">Warning</string>
    <string name="anythink_basead_ad_text">AD</string>
    <string name="anythink_basead_click_empty">This ad does not support being opened by clicking</string>
    <string name="anythink_click_to_get_reward">Click ads for rewards</string>
    <string name="anythink_interstitial_text_loading_default">The ad is loading...</string>
    <string name="anythink_interstitial_text_next_play">The next ad will play in _SEC_ s</string>
    <string name="anythink_location_allow">Allow</string>
    <string name="anythink_location_ask_title">Allow access your location？</string>
    <string name="anythink_location_deny">Disallow</string>
    <string name="anythink_myoffer_cta_install_now">Install Now</string>
    <string name="anythink_myoffer_cta_learn_more">Learn More</string>
    <string name="anythink_myoffer_intercept_web_file_download">This download is not supported</string>
    <string name="anythink_myoffer_panel_funtion">Desc</string>
    <string name="anythink_myoffer_panel_permission">Permission</string>
    <string name="anythink_myoffer_panel_privacy">Privacy</string>
    <string name="anythink_myoffer_panel_version">v%s</string>
    <string name="anythink_myoffer_shake_full_title">Shake or tap to go to the app/details</string>
    <string name="anythink_myoffer_shake_full_title_download_type">Shake or tap to download app</string>
    <string name="anythink_myoffer_splash_skip_text">Skip</string>
    <string name="anythink_reward_in_close">Reward issued successfully</string>
    <string name="anythink_reward_none_for_click">No click triggered, no reward issued</string>
    <string name="anythink_splash_ad_container_error">If the area of the ad container is less than 80% of the screen size, it may affect the exposure revenue.</string>
    <string name="anythink_splash_mix_inter_will_close">Ad will auto-close in _SEC_ s</string>
    <string name="anythink_web_download_file_cancel">Cancel</string>
    <string name="anythink_web_download_file_confirm">Download</string>
    <string name="anythink_web_download_file_confirm_title">Do you want to download this file?</string>
    <string name="anythink_web_land_page_dialog_stay">STAY</string>
    <string name="anythink_web_land_page_dialog_title">Do you really want to exit?</string>
    <string name="anythink_web_land_page_dialog_yes">YES</string>
    <string name="anythink_web_load_fail_hint">CONNECT ERROR</string>
    <string name="anythink_web_load_fail_refresh">Reload</string>
    <string name="app_name">tobidad</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appid">Saving %s as your app-id</string>
    <string name="bd_oauth_sdk_common_loading_timeout">网络连接失败，请稍后重试</string>
    <string name="bd_oauth_sdk_common_network_unavailable">网络未连接，请稍后重试</string>
    <string name="bd_oauth_sdk_common_retry_btn_text">重试</string>
    <string name="bd_oauth_sdk_common_setting_btn_text">设置</string>
    <string name="beizi_action_cant_be_completed">The requested action could not be completed.</string>
    <string name="beizi_allow">Allow</string>
    <string name="beizi_cancel">取消</string>
    <string name="beizi_confirm">确定</string>
    <string name="beizi_deny">Deny</string>
    <string name="beizi_dialog_text_hint"><font size="13">其他投诉</font></string>
    <string name="beizi_html5_geo_permission_prompt">Would you like to allow this app to access your location?</string>
    <string name="beizi_html5_geo_permission_prompt_title">%s would like to access your location</string>
    <string name="beizi_loading">Loading</string>
    <string name="beizi_native_tag">View has been registered.</string>
    <string name="beizi_skip_ad">跳过</string>
    <string name="beizi_store_picture_accept">Accept</string>
    <string name="beizi_store_picture_decline">Decline</string>
    <string name="beizi_store_picture_message">This Ad would like permission to save a picture.</string>
    <string name="beizi_store_picture_title">Store Picture?</string>
    <string name="blank_ad">E302: The server returned an ad with the response, but it was blank. There is probably an issue with the creative.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_request">Cancelling scheduled request</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="console_message" formatted="false">Received console message: %s at line %d with sourceId %s</string>
    <string name="conversion_pixel">Firing pixel: %s</string>
    <string name="conversion_pixel_delay">Firing pixel did not succeed, retrying in %dms</string>
    <string name="conversion_pixel_fail">Install pixel failed to send.</string>
    <string name="conversion_pixel_success">Firing pixel succeeded</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_calendar_event">MRAID createCalendarEvent() called</string>
    <string name="deny">Deny</string>
    <string name="destroy_int">destroy() called on interstitial.</string>
    <string name="empty_queue">show() was called, and wants an interstitial ad, but there are no valid interstitials in the queue. Load more?</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="failed_decode_pb">E210: Failed to decode ServerResponse, err = %s</string>
    <string name="failed_encode_pb">E209: Failed to encode SdkRequest, err = %s</string>
    <string name="failed_video_load" formatted="false">Failed to load video at %s due to %s</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fetch_url">Fetching: %s</string>
    <string name="fetcher_start_auto">AdFetcher started in auto-refresh mode</string>
    <string name="fetcher_start_single">AdFetcher starting in single-use mode</string>
    <string name="sdm_confirm_dialog_application_desc">desc</string>
    <string name="sdm_confirm_dialog_application_permission">permission</string>
    <string name="sdm_confirm_dialog_download_now">Download</string>
    <string name="sdm_confirm_dialog_give_up">Give up</string>
    <string name="sdm_confirm_dialog_privacy_agreement">privacy</string>
</resources>