<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/asnp_custom_dialog_shape" android:layout_width="300.0dp" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/adscope_textSize_16" android:textStyle="bold" android:textColor="#000000" android:layout_gravity="center" android:id="@id/adscope_custom_dialog_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/adscope_dimen_10" android:text="@string/adscope_dialog_tip" />
        <TextView android:textSize="@dimen/adscope_textSize_15" android:textColor="#000000" android:gravity="center" android:layout_gravity="center" android:id="@id/adscope_custom_dialog_content_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/adscope_dimen_10" android:layout_marginTop="@dimen/adscope_dimen_15" android:layout_marginRight="@dimen/adscope_dimen_10" />
        <View android:background="#f4f4f4" android:layout_width="match_parent" android:layout_height="1.0px" android:layout_marginTop="@dimen/adscope_dimen_20" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/adscope_textSize_14" android:textColor="#6e6565" android:gravity="center" android:id="@id/adscope_custom_dialog_cancel_tv" android:padding="@dimen/adscope_dimen_10" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/adscope_dialog_cancel" android:layout_weight="1.0" />
            <View android:background="#f4f4f4" android:layout_width="1.0px" android:layout_height="match_parent" />
            <TextView android:textSize="@dimen/adscope_textSize_14" android:textColor="#0dcfe8" android:gravity="center" android:id="@id/adscope_custom_dialog_confirm_tv" android:padding="@dimen/adscope_dimen_10" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/adscope_dialog_done" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
