<?xml version="1.0" encoding="utf-8"?>
<com.smartdigimkt.sdk.basead.ui.component.RoundRelativeLayout android:background="@android:color/white" android:paddingLeft="15.0dp" android:paddingRight="15.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.smartdigimkt.sdk.basead.ui.component.RoundImageView android:id="@id/sdm_confirm_dialog_icon" android:layout_width="60.0dp" android:layout_height="60.0dp" android:layout_marginTop="30.0dp" android:layout_centerHorizontal="true" />
    <com.smartdigimkt.sdk.basead.ui.component.MarqueeTextView android:textSize="@dimen/sdm_confirm_dialog_text_size_large" android:textColor="@color/sdm_confirm_dialog_d9000000" android:ellipsize="marquee" android:id="@id/sdm_confirm_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dp" android:singleLine="true" android:layout_below="@id/sdm_confirm_dialog_icon" android:layout_centerHorizontal="true" android:marqueeRepeatLimit="marquee_forever" />
    <TextView android:textSize="@dimen/sdm_confirm_dialog_text_size_normal" android:textColor="@color/sdm_confirm_dialog_cccccc" android:ellipsize="end" android:id="@id/sdm_confirm_dialog_version_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:singleLine="true" android:layout_below="@id/sdm_confirm_dialog_title" android:layout_centerHorizontal="true" />
    <com.smartdigimkt.sdk.basead.ui.component.MarqueeTextView android:textSize="@dimen/sdm_confirm_dialog_text_size_normal" android:textColor="@color/sdm_confirm_dialog_cccccc" android:ellipsize="marquee" android:id="@id/sdm_confirm_dialog_publisher_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:layout_below="@id/sdm_confirm_dialog_version_name" android:layout_centerHorizontal="true" android:marqueeRepeatLimit="marquee_forever" />
    <TextView android:textSize="@dimen/sdm_confirm_dialog_text_size_normal" android:textColor="@color/sdm_confirm_dialog_cccccc" android:id="@id/sdm_confirm_dialog_give_up" android:padding="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:text="@string/sdm_confirm_dialog_give_up" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <Button android:textSize="@dimen/sdm_confirm_dialog_text_size_large" android:textColor="#d9ffffff" android:layout_gravity="center" android:id="@id/sdm_confirm_dialog_download_now" android:background="@drawable/sdm_confirm_dialog_btn_cta" android:layout_width="match_parent" android:layout_height="@dimen/sdm_confirm_dialog_btn_height" android:layout_marginBottom="5.0dp" android:text="@string/sdm_confirm_dialog_download_now" android:layout_above="@id/sdm_confirm_dialog_give_up" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/sdm_confirm_dialog_container" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@id/sdm_confirm_dialog_download_now" android:layout_below="@id/sdm_confirm_dialog_publisher_name" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/sdm_confirm_dialog_text_size_normal" android:textColor="@color/sdm_confirm_dialog_0244e5" android:id="@id/sdm_confirm_dialog_privacy_agreement" android:padding="2.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sdm_confirm_dialog_privacy_agreement" />
        <View android:id="@id/sdm_confirm_dialog_center_line" android:background="@color/sdm_confirm_dialog_d8d8d8" android:layout_width="1.0dp" android:layout_height="12.0dp" android:layout_marginLeft="6.0dp" android:layout_marginRight="6.0dp" android:text="|" />
        <TextView android:textSize="@dimen/sdm_confirm_dialog_text_size_normal" android:textColor="@color/sdm_confirm_dialog_0244e5" android:id="@id/sdm_confirm_dialog_permission_manage" android:padding="2.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sdm_confirm_dialog_application_permission" />
        <View android:id="@id/sdm_confirm_dialog_center_line2" android:background="@color/sdm_confirm_dialog_d8d8d8" android:visibility="gone" android:layout_width="1.0dp" android:layout_height="12.0dp" android:layout_marginLeft="6.0dp" android:layout_marginRight="6.0dp" android:text="|" />
        <TextView android:textSize="@dimen/sdm_confirm_dialog_text_size_normal" android:textColor="@color/sdm_confirm_dialog_0244e5" android:id="@id/sdm_confirm_dialog_desc" android:padding="2.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sdm_confirm_dialog_application_desc" />
    </LinearLayout>
</com.smartdigimkt.sdk.basead.ui.component.RoundRelativeLayout>
